[package]
name = "bonus"
version = "0.1.0"
authors = ["Clament <clament.john.k@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "countwords"
path = "main.rs"

[dependencies]
anyhow = "1.0.38"
bstr = "0.2.15"
fxhash = "0.2.1"

[profile.release]
debug = true